--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -16,4 +16,7 @@ jobs:
         if: ${{ github.event.issue.state == 'closed' }}
         shell: bash
         run: |
-          curl -d '{"chat":"network","title":"Upptime 通知","body":"🆗 Issue [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) has been resolved.","todo":false}' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification'
+          ISSUE_TITLE="${{ github.event.issue.title }}"
+          ISSUE_TITLE="${ISSUE_TITLE/🛑/🆗}"
+          ISSUE_TITLE="${ISSUE_TITLE/down/up}"
+          curl -d '{"chat":"network","title":"Upptime 通知","body":"$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})","todo":false}' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification'
