--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -6,17 +6,46 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+    env:
+      GH_TOKEN: ${{ github.token }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
       - name: Opened
         if: ${{ github.event.issue.state != 'closed' }}
         shell: bash
         run: |
-          curl -d '{"chat":"network","title":"Upptime 通知","body":"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})","todo":true}' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification'
+          echo "post feishu message for service down"
+          response=$(curl -d '{"chat":"network","title":"Upptime 通知","body":"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})"}' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification?feishu_msg_type=text')
+          if [ "$(echo $response | jq -r '.ok')" = "true" ]; then
+            echo "post issue comment with feishu message id"
+            feishu_message_id=$(echo $response | jq -r '.feishu_response.data.message_id')
+            gh issue comment "${{ github.event.issue.number }}" --body "$feishu_message_id"            
+          fi
       - name: Closed
         if: ${{ github.event.issue.state == 'closed' }}
         shell: bash
         run: |
+          echo "post feishu message for service up"
           ISSUE_TITLE="${{ github.event.issue.title }}"
           ISSUE_TITLE="${ISSUE_TITLE/🛑/🆗}"
           ISSUE_TITLE="${ISSUE_TITLE/down/up}"
-          curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification'
+          curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification?feishu_msg_type=text'
+          echo ""
+          echo "get issue comment with feishu message id"
+          issue_comment_list=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments')
+          feishu_message_id=$(echo "$issue_comment_list" | jq -r '.[0].body')
+          if [[ "$feishu_message_id" =~ om_[a-z0-9]+ ]]; then
+            echo "put feishu message with service up"
+            curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\n\n$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'PUT' "https://feishu.zzc.cool/service/notification?feishu_message_id=$feishu_message_id"
+            echo ""
+            #
+            echo "delete issue comment with feishu message id"
+            comment_url=$(echo "$issue_comment_list" | jq -r '.[0].url')
+            comment_number=${comment_url##*issuecomment-}
+            gh api --method DELETE "/repos/${{github.repository}}/issues/comments/$comment_number"
+          fi
