--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,7 +1,7 @@
 # Change these first
 owner: zzc-tongji # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
-
+#
 sites:
   - name: S3 File Service
     url: https://file.$DOMAIN_US/
@@ -67,6 +67,8 @@ status-website:
       href: https://github.com/zzc-tongji/upptime
   apiBaseUrl: https://api.github.com
   userContentBaseUrl: https://raw.githubusercontent.com
+#
+skipDeleteIssues: true
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
