--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -35,11 +35,11 @@ jobs:
           ISSUE_TITLE="${ISSUE_TITLE/down/up}"
           #
           echo "get issue comment with feishu message id"
-          issue_comment_list=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments')
-          feishu_message_id=$(echo "$issue_comment_list" | jq -r '.[0].body')
+          issue_comment_list=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments' || echo "[]")
+          feishu_message_id=$(echo "$issue_comment_list" | jq -r '.[0].body // ""')
           if [[ "$feishu_message_id" =~ om_[a-z0-9]+ ]]; then
             echo "put feishu message with service up"
-            TZ=Asia/Shanghai curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\n\n$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) at $(date +'%Y-%m-%dT%H:%M:%S%:z')\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'PUT' "https://feishu.zzc.cool/service/notification?feishu_message_id=$feishu_message_id"
+            curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\n\n$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) at $(TZ=Asia/Shanghai date +'%Y-%m-%dT%H:%M:%S%:z')\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'PUT' "https://feishu.zzc.cool/service/notification?feishu_message_id=$feishu_message_id"
             echo ""
             #
             echo "delete issue comment with feishu message id"
