--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -19,7 +19,7 @@ jobs:
         shell: bash
         run: |
           echo "post feishu message for service down"
-          response=$(curl -d '{"chat":"network","title":"Upptime 通知","body":"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})"}' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification?feishu_msg_type=wrapped_text')
+          response=$(curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) at $(TZ=Asia/Shanghai date +'%Y-%m-%dT%H:%M:%S%:z')\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification?feishu_msg_type=wrapped_text')
           if [ "$(echo $response | jq -r '.ok')" = "true" ]; then
             echo "put issue with feishu message id"
             body=$(gh issue view "${{ github.event.issue.number }}" --json 'body' --jq '.body')
@@ -30,17 +30,22 @@ jobs:
         if: ${{ github.event.issue.state == 'closed' }}
         shell: bash
         run: |
-          ISSUE_TITLE="${{ github.event.issue.title }}"
-          ISSUE_TITLE="${ISSUE_TITLE/🛑/🆗}"
-          ISSUE_TITLE="${ISSUE_TITLE/down/up}"
+          issue_title="${{ github.event.issue.title }}"
+          issue_title="${issue_title/🛑/🆗}"
+          issue_title="${issue_title/down/up}"
           #
           echo "get issue with feishu message id"
           if [[ "${{ github.event.issue.body }}" =~ (om_[a-z0-9]+) ]]; then
+            echo "get feishu message"
+            response=$(curl -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'GET' "https://feishu.zzc.cool/service/notification?feishu_message_id=${BASH_REMATCH[1]}")
+            text=$(echo $response | jq -r '.data.text | @json')
+            text=${text//\"/}
+            text="${text/Upptime 通知/<b>Upptime 通知</b>}\n${issue_title} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) at $(TZ=Asia/Shanghai date +'%Y-%m-%dT%H:%M:%S%:z')"
             echo "put feishu message with service up"
-            curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"${{ github.event.issue.title }} [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\n\n$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) at $(TZ=Asia/Shanghai date +'%Y-%m-%dT%H:%M:%S%:z')\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'PUT' "https://feishu.zzc.cool/service/notification?feishu_message_id=${BASH_REMATCH[1]}"
+            curl -d "{\"text\":\"${text}\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'PUT' "https://feishu.zzc.cool/service/notification?feishu_message_id=${BASH_REMATCH[1]}&&feishu_msg_type=text"
             echo ""
           else
             echo "post feishu message for service up"
-            curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"$ISSUE_TITLE [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }})\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification?feishu_msg_type=wrapped_text'
+            curl -d "{\"chat\":\"network\",\"title\":\"Upptime 通知\",\"body\":\"$issue_title [#${{ github.event.issue.number }}](${{ github.event.issue.html_url }}) at $(TZ=Asia/Shanghai date +'%Y-%m-%dT%H:%M:%S%:z')\"}" -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.FEISHU_SERVICE_TOKEN }}' -X 'POST' 'https://feishu.zzc.cool/service/notification?feishu_msg_type=wrapped_text'
             echo ""
           fi
